# ray-tracing-research

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_assimp_linux.sh  build_assimp_windows.bat  build_glfw_windows.bat
cmake/: FindOptiX.cmake
src/app_hybrid_ray_tracing/: CMakeLists.txt  constants.h  hybrid_pipeline_ray_tracing.cpp  hybrid_pipeline_ray_tracing.h
src/app_hybrid_ray_tracing/pipelines/: hy_ray_tracing_pipeline.cpp  hy_ray_tracing_pipeline.h
src/app_hybrid_ray_tracing/shaders/: Makefile  anyhit.rahit  app_definitions.glsl  app_scene.glsl  auto_exposure.comp  closesthit.rchit  compile.bat  offscreen.frag  offscreen.vert  post_process.comp  postprocess.frag  raygen.rgen
src/app_monte_carlo_ray_tracing/: CMakeLists.txt  constants.h  monte_carlo_ray_tracing.cpp  monte_carlo_ray_tracing.h
src/app_monte_carlo_ray_tracing/pipelines/: mc_ray_tracing_pipeline.cpp  mc_ray_tracing_pipeline.h
src/app_monte_carlo_ray_tracing/shaders/: Makefile  app_definitions.glsl  auto_exposure.comp  miss.rmiss  post_process.comp  raygen.rgen
src/app_ray_tracing_optix_denoiser/: CMakeLists.txt  buffer_cuda.cpp  buffer_cuda.h  denoiser_optix_pipeline.cpp  denoiser_optix_pipeline.h  main.cpp  ray_tracing_optix_denoiser.cpp  ray_tracing_optix_denoiser.h  semaphore_cuda.cpp  semaphore_cuda.h  utils.hpp
src/app_ray_tracing_optix_denoiser/cuda_optix_interop/: buffer_cuda.cpp  buffer_cuda.h  denoiser_optix_pipeline.cpp  denoiser_optix_pipeline.h  semaphore_cuda.cpp  semaphore_cuda.h
src/app_ray_tracing_optix_denoiser/pipelines/: denoise_ray_tracing_pipeline.cpp  denoise_ray_tracing_pipeline.h
src/app_ray_tracing_optix_denoiser/shaders/: app_definitions.glsl  app_scene.glsl  auto_exposure.comp  compile.bat  miss.rmiss  post_process.comp  raygen.rgen  shadow.rahit
src/denoiser/: CMakeLists.txt  constants.h  denoiser.cpp  denoiser.h  main.cpp
src/denoiser/shaders/: Makefile  closesthit.rchit  compile.bat  post_process.comp  postprocess.frag  raygen.rgen  shadow.rahit  train_denoiser.comp
src/framework/: base_project.cpp  base_project.h  base_rt_project.cpp  base_rt_project.h
src/framework/core/: acceleration_structure.cpp  acceleration_structure.h  buffer.cpp  buffer.h  device.cpp  device.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h
src/framework/scene/: camera.cpp  camera.h  instance.cpp  instance.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  shader_instance.h  shader_light.h  shader_material.h
src/framework/shaders/: common.glsl  constants.h  definitions.glsl  exposure_functions.glsl  shared_constants.h  shared_definitions.glsl  utils.glsl  vertex.glsl
src/framework/shaders/ray_tracing_apps/: acc_structure.glsl  lights.glsl  materials.glsl  trace_ray.glsl  trace_shadow_ray.glsl  trace_shadow_ray_utils.glsl  vertex.glsl
src/framework/tools/: debug.cpp  debug.h  initializers.hpp  tools.cpp  tools.h
src/hybrid_pipeline_ray_tracing/: CMakeLists.txt  hybrid_pipeline_ray_tracing.cpp  hybrid_pipeline_ray_tracing.h  main.cpp
src/hybrid_pipeline_ray_tracing/common/: hy_ray_tracing_pipeline.cpp  hy_ray_tracing_pipeline.h
src/hybrid_pipeline_ray_tracing/shaders/: Makefile  anyhit.rahit  app_definitions.glsl  app_scene.glsl  closesthit.rchit  compile.bat  hybrid_constants.h  miss.rmiss  offscreen.frag  postprocess.frag  postprocess.vert  raygen.rgen  shader.frag  shader.vert  shadow.rahit  shadow.rmiss
src/monte_carlo_ray_tracing/: CMakeLists.txt  main.cpp  monte_carlo_ray_tracing.cpp  monte_carlo_ray_tracing.h
src/monte_carlo_ray_tracing/common/: auto_exposure_pipeline.cpp  auto_exposure_pipeline.h  post_process_pipeline.h  ray_tracing_pipeline.cpp  ray_tracing_pipeline.h
src/monte_carlo_ray_tracing/shaders/: Makefile  anyhit.rahit  app_definitions.glsl  app_scene.glsl  auto_exposure.comp  brdf.glsl  closesthit.rchit  compile.bat  final.frag  final.vert  miss.rmiss  postprocess.frag  raygen.rgen  shadow.rahit
src/shared/: auto_exposure_pipeline.h  hy_ray_tracing_pipeline.cpp  hy_ray_tracing_pipeline.h  post_process_pipeline.cpp  post_process_pipeline.h  ray_tracing_pipeline.cpp  ray_tracing_pipeline.h
src/shared_pipelines/: auto_exposure_pipeline.cpp  auto_exposure_pipeline.h  post_process_pipeline.cpp  post_process_pipeline.h  ray_tracing_base_pipeline.cpp  ray_tracing_base_pipeline.h
